[tool.poetry]
name = "janitor"
version = "0.1.0"
description = ""
authors = ["HackTheOxidation <tomas.hagenau@protonmail.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
antlr4-python3-runtime = "^4.13.2"
antlr4-tools = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
